StyleResolver doesn't compile without CSS_GRID_LAYOUT enabled https://bugs.webkit.org/show_bug.cgi?id=133568

Reviewed by Tim Horton.

* css/StyleResolver.cpp:
(WebCore::isDisplayGridBox): Add UNUSED_PARAM.


Canonical link: https://commits.webkit.org/151563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169640 268f45cc-cd09-0410-ab3c-d52691b4dbfc